# OMGsim

./: CMakeLists.txt  FindROOT.cmake  README.md
AA/include/: AAAnalysisManager.hh  XPPhSteppingAction.hh
AA/programs/: AA.cxx
AA/src/: AAAnalysisManager.cc  XPPhSteppingAction.cc
K40/include/: K40AnalysisManager.hh
K40/programs/: K40.cxx
K40/src/: K40AnalysisManager.cc
SimplePostAnalysis/: NoiseCoincidences.C  NoiseCoincidences.h  RunInfo.C  RunInfo.h  calcK40rates.cc  make.sh
WProp/include/: WPropAnalysisManager.hh  WPropSteppingAction.hh
WProp/programs/: WProp.cxx
WProp/resources/: ledselect
WProp/src/: WPropAnalysisManager.cc  WPropSteppingAction.cc
common/data/all/: KM3MatWLSTest.data
common/data/physics/: petzold_phase.data
common/include/: KM3AnalysisManager.hh  KM3DetectorConstruction.hh  KM3DetectorMessenger.hh  KM3EventAction.hh  KM3ExperimentTypeMessenger.hh  KM3InputDataReader.hh  KM3Material.hh  KM3MaterialData.hh  KM3MaterialMessenger.hh  KM3OpticalModuleMgr.hh  KM3PMTOpticalModel.hh  KM3ParametrisedScattering.hh  KM3ParametrizedVolume.hh  KM3PassiveVolumeMgr.hh  KM3PetzoldScattering.hh  KM3PhotoTubeMgr.hh  KM3PhysicsList.hh  KM3PhysicsListMessenger.hh  KM3PrimaryGeneratorAction.hh  KM3RunAction.hh  KM3RunManager.hh  KM3RunMessenger.hh  KM3SteppingAction.hh  KM3TrackInformation.hh  KM3TrackingAction.hh
common/src/: KM3AnalysisManager.cc  KM3DetectorConstruction.cc  KM3DetectorMessenger.cc  KM3EventAction.cc  KM3ExperimentTypeMessenger.cc  KM3InputDataReader.cc  KM3Material.cc  KM3MaterialMessenger.cc  KM3OpticalModuleMgr.cc  KM3PMTOpticalModel.cc  KM3ParametrisedScattering.cc  KM3ParametrizedVolume.cc  KM3PassiveVolumeMgr.cc  KM3PetzoldScattering.cc  KM3PhotoTubeMgr.cc  KM3PhysicsList.cc  KM3PhysicsListMessenger.cc  KM3PrimaryGeneratorAction.cc  KM3RunAction.cc  KM3RunManager.cc  KM3RunMessenger.cc  KM3SteppingAction.cc  KM3TrackInformation.cc  KM3TrackingAction.cc
documentation/: config.dox
documentation/pages/: DOM.md  calibration.md  mainpage.md  outputformat.md  quickstart.md  visualization.md
programs/: OMGsim.cxx
scripts/: vis-K40-DOM_local.mac
tests/: ElectronProductionCalculatorTester.cxx  MottaTest.cxx  PhotocathodeThicknessTester.cxx  QuantumEfficiencyTester.cxx
tests/include/: KM3PMTOpticalModelTester.hh  TerminalHistogram.hh
tests/src/: KM3PMTOpticalModelTester.cc  TerminalHistogram.cc
